--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "ferrum"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "ferrum"
 
 [dependencies]
+actix-http = "3.0.0-beta.9"
+actix-web = "4.0.0-beta.8"
+config = { version = "0.11", features = ["json"] }
+serde = "1.0"
+sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
