--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,9 @@ tracing-futures = "0.2.4"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.2.2"
 tracing-log = "0.1.1"
+
+[dev-dependencies]
+actix-rt = "2"
+once_cell = "1.7.2"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+tokio = { version = "1", features = ["macros"] }
