--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ name = "ferrum"
 [dependencies]
 actix-http = "3.0.0-beta.9"
 actix-web = "4.0.0-beta.8"
+anyhow = "1.0.40"
+argon2 = { version = "0.3", features = ["std"] }
 config = { version = "0.11", features = ["json"] }
+rand = { version = "0.8", features= ["std_rng"] }
 serde = "1.0"
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 tracing = "0.1.19"
@@ -22,9 +25,15 @@ tracing-futures = "0.2.4"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.2.2"
 tracing-log = "0.1.1"
+thiserror = "1.0.24"
+validator = "0.14.0"
 
 [dev-dependencies]
 actix-rt = "2"
 once_cell = "1.7.2"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["macros"] }
+fake = "~2.3.0"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
+serde_json = "1.0.61"
