--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,15 @@ path = "src/main.rs"
 name = "ferrum"
 
 [dependencies]
-actix-http = "3.0.0-beta.9"
-actix-web = "4.0.0-beta.8"
+actix-http = "3.0.0-beta.10"
+actix-web = "4.0.0-beta.9"
+actix-web-httpauth = "0.6.0-beta.2"
 anyhow = "1.0.40"
 argon2 = { version = "0.3", features = ["std"] }
 config = { version = "0.11", features = ["json"] }
 rand = { version = "0.8", features= ["std_rng"] }
 serde = "1.0"
+serde_json = "1.0.61"
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 tracing = "0.1.19"
 tracing-actix-web = "0.4.0-beta.8"
@@ -27,6 +29,9 @@ tracing-bunyan-formatter = "0.2.2"
 tracing-log = "0.1.1"
 thiserror = "1.0.24"
 validator = "0.14.0"
+uuid = { version = "0.8", features = ["v4", "serde"] }
+jsonwebtoken = "7.2"
+futures = "0.3"
 
 [dev-dependencies]
 actix-rt = "2"
@@ -36,4 +41,3 @@ tokio = { version = "1", features = ["macros"] }
 fake = "~2.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-serde_json = "1.0.61"
