--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web-httpauth = "0.6.0-beta.2"
 anyhow = "1.0.40"
 argon2 = { version = "0.3", features = ["std"] }
 config = { version = "0.11", features = ["json"] }
+chrono = { version = "0.4", features = ["serde"] }
 rand = { version = "0.8", features= ["std_rng"] }
 serde = "1.0"
 serde_json = "1.0.61"
