--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   postgres:
     image: postgres
+    command: postgres -c 'max_connections=1000'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
