--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "ferrum"
 actix-http = "3.0.0-beta.10"
 actix-web = "4.0.0-beta.9"
 actix-web-httpauth = "0.6.0-beta.2"
+actix-cors = "0.6.0-beta.2"
 anyhow = "1.0.40"
 argon2 = { version = "0.3", features = ["std"] }
 config = { version = "0.11", features = ["json"] }
