--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ path = "src/main.rs"
 name = "ferrum"
 
 [dependencies]
+actix = "0.12"
 actix-http = "3.0.0-beta.10"
 actix-web = "4.0.0-beta.9"
+actix-web-actors = "4.0.0-beta.7"
 actix-web-httpauth = "0.6.0-beta.2"
 actix-cors = "0.6.0-beta.2"
 anyhow = "1.0.40"
@@ -34,10 +36,10 @@ validator = "0.14.0"
 uuid = { version = "0.8", features = ["v4", "serde"] }
 jsonwebtoken = "7.2"
 futures = "0.3"
+once_cell = "1.7.2"
 
 [dev-dependencies]
 actix-rt = "2"
-once_cell = "1.7.2"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["macros"] }
 fake = "~2.3.0"
