--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.0.0-beta.9"
 actix-web-actors = "4.0.0-beta.7"
 actix-web-httpauth = "0.6.0-beta.2"
 actix-cors = "0.6.0-beta.2"
+awc = "3.0.0-beta.8"
 anyhow = "1.0.40"
 argon2 = { version = "0.3", features = ["std"] }
 config = { version = "0.11", features = ["json"] }
@@ -40,7 +41,6 @@ once_cell = "1.7.2"
 
 [dev-dependencies]
 actix-rt = "2"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 tokio = { version = "1", features = ["macros"] }
 fake = "~2.3.0"
 quickcheck = "0.9.2"
