Add test macro to handle database cleanup

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Migrate database
         run: |
+          cd geplauder
           sqlx database create
           sqlx migrate run
 
@@ -136,6 +137,7 @@ jobs:
 
       - name: Migrate database
         run: |
+          cd geplauder
           sqlx database create
           sqlx migrate run
 
