--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -145,7 +145,7 @@ jobs:
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--ignore-tests'
+          args: '--ignore-tests --workspace --exclude=geplauder-macros'
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1.0.2
