--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,6 @@ jobs:
 
       - name: Migrate database
         run: |
-          cd geplauder
           sqlx database create
           sqlx migrate run
 
@@ -137,7 +136,6 @@ jobs:
 
       - name: Migrate database
         run: |
-          cd geplauder
           sqlx database create
           sqlx migrate run
 
@@ -145,7 +143,7 @@ jobs:
         uses: actions-rs/tarpaulin@v0.1
         with:
           version: '0.15.0'
-          args: '--ignore-tests --workspace --exclude=geplauder-macros'
+          args: '--ignore-tests --workspace --exclude=ferrum-macros'
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1.0.2
