Add response models for database models

--- a/ferrum-db/Cargo.toml
+++ b/ferrum-db/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ferrum-shared = { path = "../ferrum-shared" }
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 validator = "0.14.0"
 serde = "1.0"
