--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ resolver = "2"
 members = [
     ".",
     "ferrum-db",
-    "ferrum-macros"
+    "ferrum-macros",
+    "ferrum-shared"
 ]
 
 [dependencies]
 ferrum-db = { path = "./ferrum-db" }
+ferrum-shared = { path = "./ferrum-shared"}
 actix = "0.12"
 actix-http = "3.0.0-beta.10"
 actix-web = "4.0.0-beta.9"
