--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,11 +1,15 @@
 name: Rust
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 env:
   CARGO_TERM_COLOR: always
   APP_ENV: testing
-  SQLX_VERSION: 0.5.7
+  SQLX_VERSION: 0.5.9
   SQLX_FEATURES: postgres
 
 jobs:
