--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Migrate database
         run: |
+          cd ferrum-db
           sqlx database create
           sqlx migrate run
 
@@ -140,6 +141,7 @@ jobs:
 
       - name: Migrate database
         run: |
+          cd ferrum-db
           sqlx database create
           sqlx migrate run
 
