--- a/ferrum-shared/Cargo.toml
+++ b/ferrum-shared/Cargo.toml
@@ -14,3 +14,9 @@ actix-http = "3.0.0-beta.10"
 jsonwebtoken = "7.2"
 futures = "0.3"
 thiserror = "1.0.24"
+config = { version = "0.11", features = ["json"] }
+sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+lapin = "1.8"
+
+[dev-dependencies]
+claim = "0.5.0"
