--- a/ferrum-websocket/Cargo.toml
+++ b/ferrum-websocket/Cargo.toml
@@ -28,3 +28,6 @@ futures-util = "0.3.17"
 meio = "0.96.0"
 async-trait = "0.1.51"
 anyhow = "1.0"
+lapin = "1.8"
+tokio-amqp = "1.0.0"
+bincode = "1.3.3"
