--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ uuid = { version = "0.8", features = ["v4", "serde"] }
 jsonwebtoken = "7.2"
 futures = "0.3"
 once_cell = "1.7.2"
+lapin = "1.8"
+tokio-amqp = "1.0.0"
 
 [dev-dependencies]
 ferrum-macros = { path = "./ferrum-macros" }
