--- a/ferrum-shared/Cargo.toml
+++ b/ferrum-shared/Cargo.toml
@@ -17,6 +17,7 @@ thiserror = "1.0.24"
 config = { version = "0.11", features = ["json"] }
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 lapin = "1.8"
+meio = "0.96.0"
 
 [dev-dependencies]
 claim = "0.5.0"
