--- a/ferrum-db/Cargo.toml
+++ b/ferrum-db/Cargo.toml
@@ -10,6 +10,7 @@ ferrum-shared = { path = "../ferrum-shared" }
 sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 validator = "0.14.0"
 serde = "1.0"
+bitflags = "1.3.2"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 argon2 = { version = "0.3", features = ["std"] }
