--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ ferrum-db = { path = "./ferrum-db" }
 ferrum-shared = { path = "./ferrum-shared"}
 #
 actix = "0.12"
-actix-http = "3.0.0-beta.11"
-actix-web = "4.0.0-beta.10"
-actix-cors = "0.6.0-beta.3"
+actix-http = "3.0.0-rc.2"
+actix-web = "4.0.0-rc.2"
+actix-cors = "0.6.0-beta.10"
 actix-codec = "0.4.0"
 anyhow = "1.0.44"
 argon2 = { version = "0.3", features = ["std"] }
@@ -35,12 +35,12 @@ chrono = { version = "0.4", features = ["serde"] }
 rand = { version = "0.8", features= ["std_rng"] }
 serde = "1.0"
 serde_json = "1.0.68"
-sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+sqlx = { version = "0.5.10", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 tracing = "0.1.29"
-tracing-actix-web = "0.4.0-beta.15"
+tracing-actix-web = "0.5.0-rc.2"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.0", features = ["registry", "env-filter"] }
-tracing-bunyan-formatter = "0.2.6"
+tracing-bunyan-formatter = "0.3.2"
 tracing-log = "0.1.2"
 thiserror = "1.0.30"
 validator = "0.14.0"
@@ -48,8 +48,9 @@ uuid = { version = "0.8", features = ["v4", "serde"] }
 jsonwebtoken = "7.2"
 futures = "0.3"
 once_cell = "1.8.0"
-lapin = "1.8"
-tokio-amqp = "1.0.0"
+lapin = "2.0"
+tokio-amqp = "2.0.0"
+executor-trait = "2.1.0"
 
 [dev-dependencies]
 ferrum-macros = { path = "./ferrum-macros" }
