--- a/ferrum-shared/Cargo.toml
+++ b/ferrum-shared/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 serde = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
-actix-web = "4.0.0-beta.10"
-actix-http = "3.0.0-beta.11"
+actix-http = "3.0.0-rc.2"
+actix-web = "4.0.0-rc.2"
 jsonwebtoken = "7.2"
 futures = "0.3"
 thiserror = "1.0.30"
@@ -18,10 +18,10 @@ config = { version = "0.11", features = ["json"] }
 sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 meio = "0.96.0"
 tracing = "0.1.29"
-tracing-actix-web = "0.4.0-beta.15"
+tracing-actix-web = "0.5.0-rc.2"
 tracing-futures = "0.2.5"
-tracing-subscriber = { version = "0.2.25", features = ["registry", "env-filter", "json"] }
-tracing-bunyan-formatter = "0.2.6"
+tracing-subscriber = { version = "0.3.8", features = ["registry", "env-filter", "json"] }
+tracing-bunyan-formatter = "0.3.2"
 tracing-log = "0.1.2"
 
 [dev-dependencies]
