Change settings presets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     command: postgres -c 'max_connections=1000'
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres
       PGDATA: /data/postgres
     volumes:
        - postgres:/data/postgres
     ports:
-      - "5434:5432"
+      - "5432:5432"
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
