--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,20 +24,20 @@ members = [
 ferrum-db = { path = "./ferrum-db" }
 ferrum-shared = { path = "./ferrum-shared"}
 #
-actix = "0.12"
-actix-http = "3.0.0-rc.2"
-actix-web = "4.0.0-rc.2"
-actix-cors = "0.6.0-beta.10"
-actix-codec = "0.4.0"
+actix = "0.13"
+actix-http = "3.0.0"
+actix-web = "4.0.1"
+actix-cors = "0.6.0"
+actix-codec = "0.5.0"
 anyhow = "1.0.44"
 argon2 = { version = "0.3", features = ["std"] }
 chrono = { version = "0.4", features = ["serde"] }
 rand = { version = "0.8", features= ["std_rng"] }
 serde = "1.0"
 serde_json = "1.0.68"
-sqlx = { version = "0.5.10", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+sqlx = { version = "0.5.11", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 tracing = "0.1.29"
-tracing-actix-web = "0.5.0-rc.2"
+tracing-actix-web = "0.5.1"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.0", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3.2"
@@ -55,7 +55,7 @@ executor-trait = "2.1.0"
 [dev-dependencies]
 ferrum-macros = { path = "./ferrum-macros" }
 ferrum-websocket = { path = "./ferrum-websocket" }
-awc = "3.0.0-beta.8"
+awc = "3.0.0-beta.21"
 actix-rt = "2"
 tokio = { version = "1", features = ["macros"] }
 fake = "~2.3.0"
