--- a/ferrum-shared/Cargo.toml
+++ b/ferrum-shared/Cargo.toml
@@ -9,16 +9,16 @@ edition = "2018"
 serde = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
-actix-http = "3.0.0-rc.2"
-actix-web = "4.0.0-rc.2"
+actix-http = "3.0.0"
+actix-web = "4.0.1"
 jsonwebtoken = "7.2"
 futures = "0.3"
 thiserror = "1.0.30"
 config = { version = "0.11", features = ["json"] }
-sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
+sqlx = { version = "0.5.11", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
 meio = "0.96.0"
 tracing = "0.1.29"
-tracing-actix-web = "0.5.0-rc.2"
+tracing-actix-web = "0.5.1"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.8", features = ["registry", "env-filter", "json"] }
 tracing-bunyan-formatter = "0.3.2"
